# pyespeakr

./: LICENSE  README.md  pyespeakr.py  pyproject.toml
