[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyespeakr"
version = "0.3.4"
description = "A simple Python wrapper for the eSpeak text-to-speech engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    { name = "Ramtin", email = "nahafiasas@gmail.com‬‏" }
]

keywords = ["espeak", "tts", "text-to-speech", "python"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

dependencies = []