[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyespeakr"
version = "0.5.9"
description = "Simple Python wrapper for eSpeak TTS engine"
authors = [{ name = "Rimten1379_py" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
license = {text = "MIT"}

classifiers = [
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/nahafiasas-codes/pyespeakr"